--- a/.env.deploy
+++ b/.env.deploy
@@ -1,7 +1,4 @@
-DEPLOY_USER=user
-DEPLOY_HOST=158.160.210.113
-DEPLOY_REPO=git@github.com:alenasenozenskaya/nodejs-pm2-deploy.git
+SERVER_HOST=158.160.210.113
+REPO=git@github.com:AleonaKS/nodejs-pm2-deploy.git
+USER=user
 DEPLOY_PATH=/home/user/nodejs-pm2-deploy
-DEPLOY_SSH_KEY=~/.ssh/id_pm2_deploy
-DEPLOY_SSH_KEY=~/.ssh/id_pm2_deploy
-DEPLOY_SSH_KEY=~/.ssh/mesto/private_key
