feat: update ecosystem.config.js for pm2 deploy

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-.idea
-node_modules
-*.log
-build.env
+# Node.js и деплой-файлы
+node_modules/
+.env
 .env.deploy
+dist/
+
+# Дополнительно: IDE, логи, сборки
+.vscode/
+logs/
+npm-debug.log*
